Add bracket order